fix horizontal scroll

--- a/assets/less/components/testimonials.less
+++ b/assets/less/components/testimonials.less
@@ -43,7 +43,7 @@
     overflow: hidden;
 
     @media (max-width: 767px) {
-      margin-right: -26px;
+      margin-right: -24px;
       margin-top: 24px;
     }
 
@@ -68,10 +68,10 @@
         border-radius: 12px;
 
         @media (max-width: 767px) {
-          width: calc(100% - 40px - 26px);
+          width: calc(100% - 40px - 24px);
 
           &:last-child {
-            width: calc(100% - 26px);
+            width: calc(100% - 24px);
           }
         }
 
