--- a/assets/less/components/why-us.less
+++ b/assets/less/components/why-us.less
@@ -56,7 +56,7 @@
   .wrapper {
     @media (max-width: 767px) {
       overflow: hidden;
-      margin-right: -26px;
+      margin-right: -24px;
     }
   }
 
@@ -87,10 +87,10 @@
 
       @media (max-width: 767px) {
         flex: 0 0 auto;
-        width: calc(100% - 40px - 26px);
+        width: calc(100% - 40px - 24px);
 
         &:last-child {
-          width: calc(100% - 26px);
+          width: calc(100% - 24px);
         }
       }
 
